# titanic

./: README.md  data.py  eda.py  main.py  model.py  mypy.ini  pyproject.toml  utils.py
