[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Oliver S <hrmnmichaels@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.0"
kaggle = "1.6.2"
numpy = "1.26.3"
pandas = "2.1.4"
torch = "2.1.2"
matplotlib = "3.8.2"
wandb = "0.16.2"
black = "23.12.1"
isort = "5.13.2"
flake8 = "7.0.0"
mypy = "1.8.0"
scikit-learn = "1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target_version = ["py310"]
